name:                hunt-blog-example
version:             0.1.0.0
synopsis:            Simple example of building a Hunt search engine
description:         A small sample that covers the basic actions that have to be done to build a search engine with the Hunt framework
homepage:            https://github.com/hunt-framework
license:             MIT
author:              Chris Reumann
maintainer:          Chris Reumann
build-type:          Simple
cabal-version:       >=1.8

executable hunt-blog
  hs-source-dirs: src
  main-is:           Main.hs
  build-depends:       base                >= 4.6    && < 5
                       , text              >= 1.0    && < 2.0
                       , transformers      >= 0.3    && < 0.4
                       , hunt-searchengine >= 0.1    && < 0.2
                       , aeson
                       , aeson-pretty
                       , containers
                       , bytestring
                       , data-default
