name:                hunt-cli-search
version:             0.1.0.0
synopsis:            Simple command line interface for querying hunt indexes.
description:         Command line interface for querying an index. 
homepage:            https://github.com/hunt-framework
license:             MIT
author:              Chris Reumann
maintainer:          Chris Reumann
build-type:          Simple
cabal-version:       >=1.8

executable hunt-cli-search
  hs-source-dirs: src
  main-is:           Main.hs  
  build-depends:       base                >= 4.6    && < 5
                       , text              >= 1.0    && < 2.0
                       , transformers      >= 0.3    && < 0.4
                       , hunt-searchengine >= 0.2    && < 1.0
                       , containers
                       , time
