name:                hunt-persistent
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            huntsearch.org
license:             MIT
license-file:        LICENSE
author:              Sebastian Philipp
maintainer:          sebastian@spawnhost.de
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt.git

executable hunt-persistent
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       transformers >= 0.3.0.0,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       hunt-searchengine,
                       hunt-client,
                       conduit,
                       containers >= 0.5,
                       string-conversions,
                       resourcet,
                       aeson-pretty
  -- hs-source-dirs:      
  default-language:    Haskell2010
