name:          hunt-data-jokes
version:       0.0.0.1
license:       MIT
-- license-file:  LICENSE
author:
copyright:
maintainer:
stability:     experimental
category:      Test, Data
synopsis:      Data generator for hunt framework.
homepage:      http://github.com/hunt-framework
description:   Data generator for hunt framework.
cabal-version: >=1.8
build-type:    Simple

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt.git

executable fb2js
  main-is:        Fussball2JSON.hs
  hs-source-dirs: .
  other-modules:
  build-depends:   base                   >= 4.5  && < 5
                 , containers             >= 0.5
                 , aeson
                 , aeson-pretty
                 , bytestring                        < 1
                 , text
  ghc-options:   -Wall
                 -fwarn-tabs
                 -rtsopts
